Theme ready to style

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,14 @@
+/***************************************************************************************************************************/
+/********************************************************* THEME ***********************************************************/
+/***************************************************************************************************************************/
+/***************************************************************************************************************************/
+/********************************************************** BASE ***********************************************************/
+/***************************************************************************************************************************/
+/***************************************************************************************************************************/
+/******************************************************** LAYOUT ***********************************************************/
+/***************************************************************************************************************************/
 body {
-  background: #876543; }
+  background: #dddddd; }
 
 article {
-  background: #999999; }
+  background: #cccccc; }
