--- a/default.hbs
+++ b/default.hbs
@@ -12,7 +12,7 @@
 	<link rel="stylesheet" href="/assets/css/style.css">
 	
 	{{! Responsive }}
-	<meta name="viewport" content="width=devise-width, initial-scale=1.0" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
 	{{ghost_head}}
 </head>
