--- a/assets/scss/layout.scss
+++ b/assets/scss/layout.scss
@@ -1,3 +1,25 @@
 /***************************************************************************************************************************/
 /******************************************************** LAYOUT ***********************************************************/
 /***************************************************************************************************************************/
+
+.makeblog-l-header {
+	background: $black;
+	width:100%;
+	position:fixed;
+	z-index:500;
+	padding: 5px 0 0 0;
+	position:fixed;
+	top: 0;
+}
+
+.makeblog-l-footer {
+	position:fixed;
+	bottom: 0;
+	width:100%;
+	text-align:center;
+	background:#000;
+	color:#fff;
+	padding: 0 10px;
+	padding: 10px 0;
+	display:none;
+}
