--- a/default.hbs
+++ b/default.hbs
@@ -3,6 +3,7 @@
 <head>
 	{{! Document settings }}
 	<meta charset="UTF-8">
+	<link rel="icon" type="image/png" href="/assets/images/favicon.ico" />
 
 	{{! Page meta }}
 	<title>{{meta_title}}</title>
@@ -20,5 +21,6 @@
 	{{{body}}}
 
 	{{ghost_foot}}
+	<script src="assets/js/script.js"></script>
 </body>
 </html>
