--- a/partials/footer.hbs
+++ b/partials/footer.hbs
@@ -1,5 +1,3 @@
-<footer class="l-footer-tp theme-margin">
-	<p>&copy; Copyright <a href="/">{{@blog.title}}</a>. All right reserved</p>
-	<p><a href="{{@blog.url}}/rss" target="_blank">Subscribe via RSS</a></p>
+<footer class="makeblog-l-footer">
+	<p>&copy; Copyright <a href="/">{{@blog.title}}</a>. <a href="{{@blog.url}}/rss" target="_blank">Subscribe via RSS</a></p>
 </footer>
-bbbbbbb
