--- a/default.hbs
+++ b/default.hbs
@@ -21,6 +21,6 @@
 	{{{body}}}
 
 	{{ghost_foot}}
-	<script src="assets/js/script.js"></script>
+	<script src="/assets/js/script.js"></script>
 </body>
 </html>
